[GTK] Test TestWebKitAPI/WebKit2/TestNewFirstVisuallyNonEmptyLayout times out https://bugs.webkit.org/show_bug.cgi?id=84957

Reviewed by Martin Robinson.

* Scripts/run-gtk-tests:
(TestRunner): Unskip TestNewFirstVisuallyNonEmptyLayout and
TestNewFirstVisuallyNonEmptyLayoutForImages.
* TestWebKitAPI/gtk/PlatformWebViewGtk.cpp:
(TestWebKitAPI::PlatformWebView::PlatformWebView): Show the
toplevel window containing the web view to make sure events are
received.

Canonical link: https://commits.webkit.org/102471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115322 268f45cc-cd09-0410-ab3c-d52691b4dbfc